test/classes/errors/nilability-assign/assign-nonnil-owned-from-nonnil-borrowed.good
assign-nonnil-owned-from-nonnil-borrowed.chpl:8: error: Cannot assign to owned MyClass from borrowed MyClass
